[gd_scene load_steps=27 format=3 uid="uid://cwj6ucgo2hnm"]

[ext_resource type="Texture2D" uid="uid://8m2jbxvlgidb" path="res://assets/Cute_Fantasy_Free/Enemies/Slime_Green.png" id="1_371uh"]
[ext_resource type="Script" uid="uid://cqeykjqouqvl0" path="res://script/slime.gd" id="1_p2gj0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p2gj0"]
atlas = ExtResource("1_371uh")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6pvg"]
atlas = ExtResource("1_371uh")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjw23"]
atlas = ExtResource("1_371uh")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2npkn"]
atlas = ExtResource("1_371uh")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd6lc"]
atlas = ExtResource("1_371uh")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gstla"]
atlas = ExtResource("1_371uh")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5wyi"]
atlas = ExtResource("1_371uh")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l8pv"]
atlas = ExtResource("1_371uh")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnioy"]
atlas = ExtResource("1_371uh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xjuo"]
atlas = ExtResource("1_371uh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a02ik"]
atlas = ExtResource("1_371uh")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu8ps"]
atlas = ExtResource("1_371uh")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g40cl"]
atlas = ExtResource("1_371uh")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxm07"]
atlas = ExtResource("1_371uh")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2qvl"]
atlas = ExtResource("1_371uh")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyl0w"]
atlas = ExtResource("1_371uh")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fur4c"]
atlas = ExtResource("1_371uh")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v7ff"]
atlas = ExtResource("1_371uh")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_35t6e"]
atlas = ExtResource("1_371uh")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbccl"]
atlas = ExtResource("1_371uh")
region = Rect2(448, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_p2gj0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2gj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6pvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjw23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2npkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd6lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gstla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5wyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l8pv")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnioy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xjuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a02ik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu8ps")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g40cl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxm07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2qvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyl0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fur4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v7ff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35t6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbccl")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_24adn"]
radius = 1.2558477

[sub_resource type="CircleShape2D" id="CircleShape2D_w8bnk"]
radius = 9.073232

[sub_resource type="CircleShape2D" id="CircleShape2D_1kmbt"]
radius = 29.017237

[node name="slime" type="CharacterBody2D"]
script = ExtResource("1_p2gj0")

[node name="enemy_sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -0.1252594)
scale = Vector2(0.5625, 0.5115232)
sprite_frames = SubResource("SpriteFrames_p2gj0")
animation = &"move"
frame_progress = 0.57222885

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.057308197, -0.6776819)
shape = SubResource("CircleShape2D_24adn")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.057308197, -1.5373096)
shape = SubResource("CircleShape2D_w8bnk")

[node name="Timer" type="Timer" parent="Area2D"]

[node name="range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="range"]
shape = SubResource("CircleShape2D_1kmbt")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Area2D/Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
